--- a/ent/schema-viz.html
+++ b/ent/schema-viz.html
@@ -112,16 +112,16 @@
         arrows: "to",
       },
       nodes: {
-        widthConstraint: 60,
-        heightConstraint: 60,
+        widthConstraint: 120,
+        heightConstraint: 40,
         shape: "box",
         font: { align: "center" },
       },
       layout: {
         improvedLayout: true,
         hierarchical: {
-          enabled: true,
-          levelSeparation: 250,
+          enabled: false,
+          levelSeparation: 100,
         },
       },
       physics: {
