feat: refactor equipment choicce

--- a/ent/schema-viz.html
+++ b/ent/schema-viz.html
@@ -112,15 +112,15 @@
         arrows: "to",
       },
       nodes: {
-        widthConstraint: 60,
-        heightConstraint: 60,
+        widthConstraint: 120,
+        heightConstraint: 40,
         shape: "box",
         font: { align: "center" },
       },
       layout: {
         improvedLayout: true,
         hierarchical: {
-          enabled: true,
+          enabled: false,
           levelSeparation: 250,
         },
       },
