--- a/ent/schema-viz.html
+++ b/ent/schema-viz.html
@@ -70,7 +70,7 @@
     }
 
     
-    const entGraph = JSON.parse("{\"nodes\":[{\"id\":\"AbilityScore\",\"fields\":[{\"name\":\"indx\",\"type\":\"string\"},{\"name\":\"name\",\"type\":\"string\"},{\"name\":\"desc\",\"type\":\"[]string\"},{\"name\":\"full_name\",\"type\":\"string\"}]},{\"id\":\"Skill\",\"fields\":[{\"name\":\"indx\",\"type\":\"string\"},{\"name\":\"name\",\"type\":\"string\"},{\"name\":\"desc\",\"type\":\"[]string\"}]}],\"edges\":[{\"from\":\"AbilityScore\",\"to\":\"Skill\",\"label\":\"skills\"}]}");
+    const entGraph = JSON.parse("{\"nodes\":[{\"id\":\"AbilityScore\",\"fields\":[{\"name\":\"indx\",\"type\":\"string\"},{\"name\":\"name\",\"type\":\"string\"},{\"name\":\"desc\",\"type\":\"[]string\"},{\"name\":\"full_name\",\"type\":\"string\"}]},{\"id\":\"Language\",\"fields\":[{\"name\":\"indx\",\"type\":\"string\"},{\"name\":\"name\",\"type\":\"string\"},{\"name\":\"desc\",\"type\":\"[]string\"},{\"name\":\"language_type\",\"type\":\"language.LanguageType\"},{\"name\":\"script\",\"type\":\"language.Script\"}]},{\"id\":\"Skill\",\"fields\":[{\"name\":\"indx\",\"type\":\"string\"},{\"name\":\"name\",\"type\":\"string\"},{\"name\":\"desc\",\"type\":\"[]string\"}]}],\"edges\":[{\"from\":\"AbilityScore\",\"to\":\"Skill\",\"label\":\"skills\"}]}");
     const nodes = new vis.DataSet((entGraph.nodes || []).map(n =>
     ({
       id: n.id,
